--- a/templates/tasks/base.html
+++ b/templates/tasks/base.html
@@ -39,7 +39,19 @@
             font-size: 12px;
             line-height: 1.428571429;
         }
+
+        #notification-container {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1050;
+        }
+
+        .toast {
+            min-width: 300px;
+        }
     </style>
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
@@ -87,7 +99,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">
-                            <i class="fas fa-sign-out-alt"></i> Logout ({{ user.username }}
+                            <i class="fas fa-sign-out-alt"></i> Logout ({{ user.username }})
                         </a>
                     </li>
                 {% else %}
@@ -113,5 +125,8 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Add WebSocket script -->
+<script src="{% static 'js/websocket.js' %}"></script>
+{% block extra_js %}{% endblock %}
 </body>
 </html>
